overflow fix

--- a/src/index.scss
+++ b/src/index.scss
@@ -18,6 +18,25 @@
 body {
 	font-family: 'RodinProM';
 	background-color: #2D2D2D;
+	margin: 0;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+}
+
+html,
+#root {
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+}
+
+/* Hide scrollbars across browsers */
+* {
+	scrollbar-width: none;
+}
+*::-webkit-scrollbar {
+	display: none;
 }
 
 @keyframes borderColorChange {
